deploy_api/registry/cv-canary/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cv-canary-stripprefix
  namespace: development
spec:
  stripPrefix:
    prefixes:
      - /api/cv-canary
