deploy_api/registry/cv-canary/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-canary-ingress
  namespace: development
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # NOTE: Apply strip prefix middleware to remove /api/cv from the request
    # path
    # NOTE: You have to add the namespace to the middleware name, or inspect the
    # dashboard to find the fully qualified name
    traefik.ingress.kubernetes.io/router.middlewares: development-cv-canary-stripprefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api/cv-canary"
            backend:
              service:
                name: cv-canary-service
                port:
                  number: 8001

  tls:
    - hosts:
        - "*.nip.io"
      secretName: domain-ingress-tls
